	SUBJECT.
	(shimbun-muchy-get-headers): New function.
	(shimbun-get-headers): Use `shimbun-muchy-get-headers'.
	Also search `http://muchy.com/whatsold.html".
	(shimbun-muchy-get-headers): Add new arg HEADERS.
	(shimbun-get-headers): Bug fixed.
	Do not delete working regions.
	(shimbun-muchy-get-headers): Remove unnecessary temporary variable
	COUNT.
	(shimbun-get-headers): Ditto.

2001-10-20  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-muchy.el: New file.

	* shimbun/sb-ibm-dev.el: New file.
	(shimbun-make-contents): Move a reference to a PDF file to the end
	of buffer.
	Remove font class attribute from a subject string.
	(shimbun-make-contents): Declare a local variable SUBJECT.

2001-10-19  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* aclocal.m4 (AC_ADD_LOAD_PATH): When `yes' or null string is
	passed as an argument, call `w3mhack-load-path' to search places
	of required modules automatically.

	* w3mhack.el (w3mhack-load-path): New function.

2001-10-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-create-image): Call `w3m-fix-gif' if
	`w3m-should-convert-interlaced-gifs' is non-nil.
	(w3m-fix-gif): Renamed from `w3m-unoptimize-animated-gif'; convert
	an interlaced gif to be non-interlaced as well as unoptimization.
	(w3m-cache-fixed-gif-images-max-length): Renamed from
	`w3m-cache-unoptimized-gif-images-max-length'.
	(w3m-cache-fixed-gif-images): Renamed from
	`w3m-cache-unoptimized-gif-images'.
	(w3m-should-convert-interlaced-gifs): New variable.

2001-10-16  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* README.ja: Add description about "new custom".

	* README: Ditto.

	* w3m.el (w3m-attributes): When URL matches `about://source/',
	returns nil as its content-charset.
	(w3m-about-retrieve): When URL matches `about://source/',
	don't call `encode-coding-region'.
	(w3m-about-source): Don't call `w3m-decode-region'.
	(w3m-exec): Use `set-buffer-file-coding-system' instead of to set
	`buffer-file-coding-system'.
